Bug fixes for unit test